k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suma-service
  namespace: microservices-ci
spec:
  selector:
    app: suma
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8085
  type: LoadBalancer
